--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#clesio34{
+    display: flex;
+    justify-content: end;
+}
+
 a, a:hover{
     text-decoration: none;
 }
