--- a/quem.css
+++ b/quem.css
@@ -116,7 +116,7 @@
         }
         
         .menu-resp {
-            display: none
+            display: none;
         }
         
         .swiper-container {
