--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a, a:hover{
     align-items: center;
     justify-content: space-around;
     padding: 10px 25px;
-    background: #000000;
+    background: khaki;
 }
 .top-bar span{
     color: #fff;
@@ -249,7 +249,7 @@ transition: 1s;
 #ccc{
     width: 150px;
 }
-<<<<<<< HEAD
+
 
 
 .velho{
@@ -259,5 +259,5 @@ transition: 1s;
     background-size: cover;
     width: 100%;
 }
-=======
->>>>>>> 4f2a219a4385b168ac81faa3b7bf48780b353080
+
+
