--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a, a:hover{
     align-items: center;
     justify-content: space-around;
     padding: 10px 25px;
-    background: khaki;
+    background: #4ABDAC;
 }
 .top-bar span{
     color: #fff;
