--- a/horario.css
+++ b/horario.css
@@ -9,7 +9,7 @@
     text-align: center;
     padding: 2em;
     height: 100px;
-    background-color: #ef4b3f;
+    background-color: #4ABDAC;
     color: #fff;
 }
 #hora h1 {
