--- a/vai.css
+++ b/vai.css
@@ -229,6 +229,8 @@ h6 {
 	color: #ffaf53;
 }
 
+
+
 .icon-text h4 {
 	font-size: 16px;
 	font-weight: 600;
@@ -541,4 +543,8 @@ h6 {
 .banner-overlay {
 	padding: 150px 0px 100px;
 }
+}
+
+#icon2{
+	width: 12.5rem;
 }
