--- a/vai.css
+++ b/vai.css
@@ -483,7 +483,7 @@ h6 {
 	color: #fff;
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-	background: #ffaf53;
+	background: #4ABDAC;
 	padding: 12px 45px;
 	font-size: 15px;
 	border-radius: 30px;
