--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 body{
@@ -27,7 +26,7 @@ a, a:hover{
     align-items: center;
     justify-content: space-around;
     padding: 10px 25px;
-    background: #4ABDAC;
+    background: rgb(0,135,183);
 }
 .top-bar span{
     color: #fff;
@@ -123,7 +122,7 @@ justify-content: center;
 }
 
 .color_orange{
-    color: #ffffff;
+    color: #a9a9a9ba;
     background: #FC4A1A;
  font-size: 20px;
  width: 15em;
