--- a/vai.css
+++ b/vai.css
@@ -40,7 +40,8 @@ h4 {
 	font-size: 26px;
 }
 h5 {
-	font-size: 15px;
+	font-size: 16px;
+
 }
 h6 {
 	font-size: 13px;
@@ -64,8 +65,7 @@ h6 {
 	z-index: 1030;
 }
 
-.navbar .navbar-brand {
-}
+
 .navbar .nav-item {
 	margin: 0 5px;
 	padding: 0;
@@ -88,9 +88,7 @@ h6 {
 	display: none;
 }
 
-.nav-scroll .navbar-nav > li > a {
-	color: #333;
-}
+
 .nav-scroll .navbar-brand img {
 	-webkit-transform: scale(1.03) !important;
 	transform: scale(1.03) !important;
@@ -160,7 +158,7 @@ h6 {
 	width: 175px;
 }
 .section-title-line:after {
-	background: #ffaf53;
+	background: #030303;
 	bottom: -1px;
 	content: "";
 	height: 2px;
@@ -189,13 +187,12 @@ h6 {
 .no-padding {
 	padding: 0px !important;
 }
-.sub-title-paragraph {
-}
+
 .sub-title-paragraph h4 {
 	margin-bottom: 5px;
 }
 .sub-title-paragraph h5 {
-	color:#ffaf53;
+	color:#000000;
 }
 .sub-title-paragraph p {
 	padding-top: 20px;
@@ -204,7 +201,7 @@ h6 {
 	line-height: 25px;
 }
 .anchor-btn {
-	background: #ffaf53;
+	background:#328CC1;
 	padding: 10px 20px;
 	color: #ffffff !important;
 	border-radius: 3px;
@@ -222,8 +219,7 @@ h6 {
 	-webkit-box-shadow: 0px 5px 35px 0px rgba(148, 146, 245, 0.15);
 	box-shadow: 0px 5px 35px 0px rgba(148, 146, 245, 0.15);
 }
-.service-box .icon {
-}
+
 .service-box .icon i {
 	font-size: 40px;
 	color: #ffaf53;
@@ -318,7 +314,6 @@ h6 {
 	top: 0;
 	width: 100%;
 	height: 50%;
-	background: rgba(0, 0, 0, 0.8);
 	-webkit-transition: all 150ms ease-in-out 200ms;
 	transition: all 150ms ease-in-out 200ms;
 }
@@ -329,7 +324,7 @@ h6 {
 	bottom: 0;
 	width: 100%;
 	height: 50%;
-	background: rgba(0, 0, 0, 0.8);
+
 	-webkit-transition: all 150ms ease-in-out 200ms;
 	transition: all 150ms ease-in-out 200ms;
 }
@@ -459,7 +454,7 @@ h6 {
 }
 .info-box .icon i {
 	font-size: 20px;
-	color: #ffaf53;
+	color: #000000;
 }
 .info-box .content {
 	display:inline-block;
@@ -483,7 +478,7 @@ h6 {
 	color: #fff;
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-	background: #4ABDAC;
+	background: #328CC1;
 	padding: 12px 45px;
 	font-size: 15px;
 	border-radius: 30px;
@@ -499,8 +494,8 @@ h6 {
 }
 @media all and (max-width:991px) {
 .navbar .navbar-collapse {
-	overflow: auto;
-	background: rgba(0, 0, 0, 0.72);
+
+
 	color: #fff !important;
 	text-align: center;
 	padding: 10px 0;
