--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a, a:hover{
 }
 .top-bar span{
     color: #fff;
-}
+}   
 .top-bar ul{
     display: flex;
     list-style: none;
@@ -66,7 +66,7 @@ nav a{
 }
 
 nav a:hover{
-    color: #ef4b3f;
+    color: #000000;
 }
 .top-bar a:hover{
     color: #222;
