--- a/horario.css
+++ b/horario.css
@@ -1,18 +1,43 @@
-.horario h1, p {
+@import url('https://fonts.googleapis.com/css2?family=silvass:wght@300;400;700&family=Bento:ital,wght@0,500;0,600;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=antonio:wght@500&family=antonios+One&display=swap');
+
+
+.container .bs{
+    display: flex;
+    flex-direction: column;
+    min-height : 100vh;
     text-align: center;
     
-}
-span {
+   
+
+   }
+
+   .container .main {
+    flex: 1 1 0;
+    background-color: transparent;
+    border: 0;
+   }
+   h3 , h1, p {
     text-align: center;
-}
-.horario p {
-    font-size: 15pt;
+    font-family: 'Bento';
+
+   }
+   h1,h3 {
+    color: #32338e;
+    font-weight: 600;
+    text-align: center;
     
-}
-
-
-.btn{
-    width: 100%;
     
-
+   }
+  
+.btn {
+  text-align: center;
+  align-items: center;
 }
+/*Hora */
+
+#relogio {
+  display: flex;
+  margin-inline-end: auto;
+}
+
