--- a/contato.css
+++ b/contato.css
@@ -84,8 +84,20 @@ background-size: cover;
     justify-content: center;
     padding: 100px;
     color: white;
-    font-weight: 700;
+   
 }
+.item3 p {
+    background-color: rgb(0, 0, 0, 0.4);
+    font-size: 12pt;
+    border-radius: 6px;
+    padding: 1em;
+    
+}
+.nav-item{
+    font-size: 15pt;
+    text-transform: uppercase;
+}
+
 
 
 
