--- a/style.css
+++ b/style.css
@@ -382,7 +382,85 @@ align-items: center;
   }
   
   #myBtn:hover {
-    background-color: rgb(241, 28, 28);
+    background-color: rgb(8, 98, 130);    
   }
   /* abas verticais */
   
+
+
+
+
+  /* dropdowns select */
+
+  .dropbtn {
+    background-color: rgb(49, 76, 103);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 10em;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #303130;
+  }
+
+  .container-flo{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 6em;
+    flex-wrap: wrap;
+  }
+
+
+
+  @media screen and (max-width: 678px) {
+    .container-flo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .dropdown{
+        padding: 10px;
+    }
+  }
+
+
+
+  /* administrativo */
+
+  #administrativo{
+    background-image: url("img/lovepik-black-creative-background-image_500872896.jpg");
+    background-size: contain;
+  }
